# tests_conan

app_dep_b/: CMakeLists.txt  conanfile.py  main.cpp
lib_a_nodeps/: CMakeLists.txt  LibA.cpp  LibA.h  conanfile.py
lib_b_dep_a/: CMakeLists.txt  LibB.cpp  LibB.h  conanfile.py
